--- a/style.css
+++ b/style.css
@@ -10,14 +10,61 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
+.loader
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.loader__bar {
+    color: #fff;
+    line-height: 2em;
+    height: 2em;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 10em;
+    text-align: center;
+    margin-left: -5em;
+    margin-top: -1em;
+    overflow: hidden;
+}
+
+.loader__progress,.loader__progress-bg,.loader__info {
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+.loader__progress {
+    z-index: 1;
+    width: 0;
+    background: #1A3831;
+    border-radius: 1em;
+}
+
+.loader__progress-bg {
+    z-index: 0;
+    width: 100%;
+    background: #3C776A;
+    border-radius: 1em;
+}
+
+.loader__info {
+    z-index: 2;
+    width: 100%;
+}
+
 .left_top_01
 {
     width:640px;
     position: absolute;
     animation:leftEnterAnim 2s 1;
-    -moz-animation:leftEnterAnim 2s 1;
-    -webkit-animation:leftEnterAnim 2s 1;
-    -o-animation:leftEnterAnim 2s 1;
 }
 
 .bottom_01
@@ -50,29 +97,17 @@ body {
     width: 640px;
     position: absolute;
     top: -50px;
+    animation:topEnterAnim 2s 1;
+}
+
+.decorate
+{
+    width: 640px;
+    position: absolute;
     animation:opacityEnterAnim 2s 1;
 }
 
-
 @keyframes leftEnterAnim
-{
-    0%   {left:-640px}
-    100% {left:0px}
-}
-
-@-moz-keyframes leftEnterAnim /* Firefox */
-{
-    0%   {left:-640px}
-    100% {left:0px}
-}
-
-@-webkit-keyframes leftEnterAnim /* Safari and Chrome */
-{
-    0%   {left:-640px}
-    100% {left:0px}
-}
-
-@-o-keyframes leftEnterAnim /* Opera */
 {
     0%   {left:-640px}
     100% {left:0px}
@@ -84,6 +119,12 @@ body {
     100% {bottom:0px}
 }
 
+@keyframes topEnterAnim
+{
+    0%   {top:-640px}
+    100% {top:-50px}
+}
+
 @keyframes opacityEnterAnim
 {
     0%   {opacity: 0;}
@@ -91,58 +132,73 @@ body {
     100% {opacity: 1;}
 }
 
-/*
-=====================================
+.rock {
+    -moz-animation: rockAnim 1s linear infinite;
+    -webkit-animation: rockAnim 1s linear infinite;
+    animation: rockAnim 1s linear infinite;
+}
 
- candle in the wind 
- 
-=====================================
+@keyframes rockAnim {
+    0%, 100% {
+        -moz-transform: scale(1) rotateZ(0deg);
+        -ms-transform: scale(1) rotateZ(0deg);
+        -webkit-transform: scale(1) rotateZ(0deg);
+        transform: scale(1) rotateZ(0deg);
+        opacity: 1;
+    }
+    
+    26% {
+        -moz-transform: scale(1.1) rotateZ(12deg);
+        -ms-transform: scale(1.1) rotateZ(12deg);
+        -webkit-transform: scale(1.1) rotateZ(12deg);
+        transform: scale(1.1) rotateZ(12deg);
+        opacity: .2;
+    }
+
+    76% {
+        -moz-transform: scale(0.8) rotateZ(-8deg);
+        -ms-transform: scale(0.8) rotateZ(-8deg);
+        -webkit-transform: scale(0.8) rotateZ(-8deg);
+        transform: scale(0.8) rotateZ(-8deg);
+        opacity: .6;
+    }
+}
+
+/*
+=========================================================
+
+swivel chair
+
+=========================================================
 */
 
-@keyframes candleInTheWind {
-    0% {
-      opacity: 0;
-    }
-  
-    12.5% {
-      opacity: .25;
-      transform: skewX(-10deg);
-    }
-  
-    25% {
-      opacity: 0;
-    }
-  
-    37.5% {
-      opacity: 0;
-      transform: skewX(-10deg);
-    }
-  
-    50% {
-      opacity: .75;
-    }
-  
-    62.5% {
-      opacity: 0;
-    }
-  
-    75% {
+@keyframes swivelChair {
+    from {
+      transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+      animation-timing-function: ease-in;
       opacity: 1;
-      transform: skewX(-5deg);
     }
   
-    87.5% {
-      opacity: .5;
+    40% {
+      transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+      animation-timing-function: ease-in;
     }
   
-    100% {
+    60% {
+      transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
       opacity: 1;
+    }
+  
+    80% {
+      transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+    }
+  
+    to {
+      transform: perspective(400px);
     }
   }
   
-  .candleInTheWind {
-    opacity: 0;
-    animation-name: candleInTheWind;
-    animation-duration: 0.7s;
-    animation-fill-mode: forwards;
+  .swivelChair {
+    animation-name: swivelChair;
+    animation-duration: 2s;
   }
